test/e2e/testdata/tracing-zipkin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tracing-zipkin
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: tracing-zipkin
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyProxy
metadata:
  name: tracing-zipkin
  namespace: gateway-conformance-infra
spec:
  ipFamily: IPv4
  logging:
    level:
      default: debug
  telemetry:
    tracing:
      provider:
        samplingRate: 1  # this will be overridden by the samplingFraction
        samplingFraction:
          number: 100
          denominator: 100
        type: Zipkin
        backendRefs:
          - name: otel-collector
            namespace: monitoring
            port: 9411
        zipkin:
          enable128BitTraceId: true
      customTags:
        "provider":
          type: Literal
          literal:
            value: "zipkin"
        "k8s.cluster.name":
          type: Literal
          literal:
            value: "envoy-gateway"
        "k8s.pod.name":
          type: Environment
          environment:
            name: ENVOY_POD_NAME
            defaultValue: "-"
        "k8s.namespace.name":
          type: Environment
          environment:
            name: ENVOY_GATEWAY_NAMESPACE
            defaultValue: "envoy-gateway-system"
  shutdown:
    drainTimeout: 5s
    minDrainDuration: 1s
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tracing-zipkin
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: tracing-zipkin
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /zipkin
      backendRefs:
        - name: infra-backend-v2
          port: 8080
